--- a/sass/base/_reset.scss
+++ b/sass/base/_reset.scss
@@ -19,7 +19,7 @@ img {
   display: block;
 }
 .container {
-  width: 1200px;
+  width: 100%;
   padding-left: 15px;
   padding-right: 15px;
   margin: 0 auto;
