--- a/css/main.css
+++ b/css/main.css
@@ -902,6 +902,11 @@ body {
     max-width: 768px;
   }
 }
+@media screen and (min-width: 1200px) {
+  .team {
+    max-width: 1200px;
+  }
+}
 
 .our-team {
   margin-bottom: 30px;
@@ -915,6 +920,13 @@ body {
 
 .team .link {
   margin-bottom: -30px;
+}
+@media screen and (min-width: 768px) {
+  .team .link {
+    display: flex;
+    flex-wrap: wrap;
+    margin-left: -30px;
+  }
 }
 
 .team-item {
@@ -934,13 +946,23 @@ body {
 
 .bcg-our-team {
   background-color: var(--our-team-bgc-color);
-  padding-top: 60px;
-  padding-bottom: 60px;
 }
-
+@media screen and (min-width: 480px) {
+  .bcg-our-team {
+    padding-top: 60px;
+    padding-bottom: 60px;
+  }
+}
 @media screen and (min-width: 768px) {
-  .link .list + .list {
-    margin-left: 30px;
+  .bcg-our-team {
+    padding-top: 60px;
+    padding-bottom: 60px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .bcg-our-team {
+    padding-top: 94px;
+    padding-bottom: 94px;
   }
 }
 
@@ -995,10 +1017,20 @@ body {
   border-radius: 0px 0px 4px 4px;
   margin-bottom: 30px;
 }
+@media screen and (min-width: 768px) {
+  .team-list {
+    flex-basis: calc(50% - 30px);
+  }
+}
+@media screen and (min-width: 1200px) {
+  .team-list {
+    flex-basis: calc(25% - 30px);
+  }
+}
 
 @media screen and (min-width: 768px) {
   .team-list {
-    margin-bottom: 30px;
+    margin-left: 30px;
   }
 }
 
