--- a/sass/components/_our-team.scss
+++ b/sass/components/_our-team.scss
@@ -5,6 +5,9 @@
   @media screen and (min-width: 768px) {
     max-width: 768px;
   }
+  @media screen and (min-width: 1200px) {
+    max-width: 1200px;
+  }
 }
 
 .our-team {
@@ -21,6 +24,11 @@
 
 .team .link {
   margin-bottom: -30px;
+  @media screen and (min-width: 768px) {
+    display: flex;
+    flex-wrap: wrap;
+    margin-left: -30px;
+  }
 }
 
 .team-item {
@@ -41,15 +49,22 @@
 }
 .bcg-our-team {
   background-color: var(--our-team-bgc-color);
-  padding-top: 60px;
-  padding-bottom: 60px;
-}
 
-.link .list + .list {
+  @media screen and (min-width: 480px) {
+    padding-top: 60px;
+    padding-bottom: 60px;
+  }
   @media screen and (min-width: 768px) {
-    margin-left: 30px;
+    padding-top: 60px;
+    padding-bottom: 60px;
+  }
+
+  @media screen and (min-width: 1200px) {
+    padding-top: 94px;
+    padding-bottom: 94px;
   }
 }
+
 .profession-text {
   text-align: center;
   font-size: 16px;
@@ -107,10 +122,16 @@
   border-radius: 0px 0px 4px 4px;
 
   margin-bottom: 30px;
+  @media screen and (min-width: 768px) {
+    flex-basis: calc(100% / 2 - 30px);
+  }
+  @media screen and (min-width: 1200px) {
+    flex-basis: calc(100% / 4 - 30px);
+  }
 }
 
 .team-list {
   @media screen and (min-width: 768px) {
-    margin-bottom: 30px;
+    margin-left: 30px;
   }
 }
