--- a/sass/components/_our-team.scss
+++ b/sass/components/_our-team.scss
@@ -20,6 +20,11 @@
   letter-spacing: 0.03em;
 
   color: var(--title-text-color);
+
+  @media screen and (min-width: 768px) {
+    font-size: 36px;
+    line-height: 1.16;
+  }
 }
 
 .team .link {
@@ -49,6 +54,9 @@
 }
 .bcg-our-team {
   background-color: var(--our-team-bgc-color);
+
+  padding-top: 60px;
+  padding-bottom: 60px;
 
   @media screen and (min-width: 480px) {
     padding-top: 60px;
