--- a/css/main.css
+++ b/css/main.css
@@ -805,18 +805,58 @@ body {
   color: var(--primary-bg-color);
 }
 
-.work {
-  display: flex;
+@media screen and (min-width: 480px) {
+  .work {
+    max-width: 480px;
+  }
+}
+@media screen and (min-width: 768px) {
+  .work {
+    max-width: 768px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .work {
+    max-width: 1200px;
+  }
 }
 
-.li-item {
-  width: 270px;
+.benefits {
+  padding-top: 60px;
+  padding-bottom: 60px;
 }
-.li-item + .li-item {
-  margin-left: 30px;
+@media screen and (min-width: 1200px) {
+  .benefits {
+    padding-top: 94px;
+    padding-bottom: 94px;
+  }
 }
-.li-item:last-child {
-  margin-right: 0;
+
+@media screen and (min-width: 768px) {
+  .benefits .work {
+    display: flex;
+    flex-wrap: wrap;
+    margin-left: -30px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .benefits .work {
+    margin-left: auto;
+    margin-right: auto;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .li-item {
+    flex-basis: calc(50% - 30px);
+    margin-left: 30px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .li-item {
+    flex-basis: calc(25% - 30px);
+    margin-left: 30px;
+  }
 }
 
 .li-div-icon {
@@ -824,13 +864,14 @@ body {
   justify-content: center;
   align-items: center;
   border-radius: 4px;
-  width: 270px;
+  width: 100%;
   height: 120px;
   background-color: var(--our-team-bgc-color);
   margin-bottom: 30px;
 }
 
 .list-text {
+  text-align: center;
   margin-bottom: 10px;
   font-size: 14px;
   line-height: 1.14;
@@ -840,6 +881,11 @@ body {
 }
 .list-text .description-text {
   width: 270px;
+}
+@media screen and (min-width: 768px) {
+  .list-text {
+    text-align: left;
+  }
 }
 
 .description-text {
