--- a/sass/components/_studio-hero.scss
+++ b/sass/components/_studio-hero.scss
@@ -1,5 +1,3 @@
-
-
 .business {
   padding-bottom: 200px;
   padding-top: 200px;
@@ -16,13 +14,35 @@
   background-size: cover;
   max-width: 1600px;
   margin: 0 auto;
+
+  @media screen and (min-width: 480px) {
+    max-width: 480px;
+  }
+  @media screen and (min-width: 768px) {
+    max-width: 768px;
+  }
+  @media screen and (min-width: 1200px) {
+    max-width: 1200px;
+  }
 }
 
+.business-text {
+  margin-bottom: 30px;
+  margin-left: auto;
+  margin-right: auto;
 
+  max-width: 696px;
+  font-weight: 900;
+  font-size: 26px;
+  line-height: 1, 61;
+  letter-spacing: 0.06em;
+  text-transform: uppercase;
+  text-align: center;
 
+  color: var(--primary-bg-color);
 
-
-
-
-
-
+  @media screen and (min-width: 1200px) {
+    font-size: 44px;
+    line-height: 1.36;
+  }
+}
