--- a/css/main.css
+++ b/css/main.css
@@ -415,12 +415,7 @@ body {
   fill: var(--primary-bg-color);
 }
 
-.portfolio {
-  display: flex;
-  flex-wrap: wrap;
-}
 .portfolio .items {
-  margin-right: 30px;
   margin-bottom: 30px;
 }
 .portfolio .items:nth-child(3n) {
@@ -428,6 +423,42 @@ body {
 }
 .portfolio:nth-last-child(-n+3) {
   margin-bottom: 0px;
+}
+@media screen and (min-width: 480px) {
+  .portfolio {
+    max-width: 480px;
+  }
+}
+@media screen and (min-width: 768px) {
+  .portfolio {
+    max-width: 768px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .portfolio {
+    max-width: 1200px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .portfolio {
+    display: flex;
+    flex-wrap: wrap;
+    margin-left: -30px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .portfolio .items {
+    flex-basis: calc(50% - 30px);
+    margin-left: 30px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .portfolio .items {
+    flex-basis: calc(33.3333333333% - 30px);
+    margin-left: 30px;
+  }
 }
 
 .portfolio-link {
@@ -456,7 +487,7 @@ body {
   padding: 63px 24px;
   font-weight: 400;
   font-size: 18px;
-  line-height: 1, 56;
+  line-height: 1, 55;
   letter-spacing: 0.03em;
   background-color: rgba(33, 150, 243, 0.9);
   color: var(--primary-bg-color);
@@ -469,6 +500,17 @@ body {
   border-top: none;
 }
 
+@media screen and (min-width: 768px) {
+  .modify-cards {
+    padding-bottom: 0;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .modify-cards {
+    padding-bottom: 20px;
+  }
+}
+
 .name {
   margin-bottom: 4px;
   font-weight: 700;
@@ -479,10 +521,21 @@ body {
 }
 
 .names__text {
-  font-size: 16px;
-  line-height: 1.88;
+  font-size: 18px;
+  line-height: 2;
   letter-spacing: 0.03em;
   color: var(--primary-text-color);
+}
+
+@media screen and (min-width: 768px) {
+  .modify-text {
+    padding-bottom: 56px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .modify-text {
+    padding-bottom: 0;
+  }
 }
 
 .business {
