--- a/sass/components/_portfolio.scss
+++ b/sass/components/_portfolio.scss
@@ -1,82 +1,131 @@
 .portfolio {
+  // display: flex;
+  // flex-wrap: wrap;
+
+  & .items {
+    // margin-right: 30px;
+    margin-bottom: 30px;
+  }
+  & .items:nth-child(3n) {
+    margin-right: 0px;
+  }
+
+  &:nth-last-child(-n + 3) {
+    margin-bottom: 0px;
+  }
+  @media screen and (min-width: 480px) {
+    max-width: 480px;
+  }
+  @media screen and (min-width: 768px) {
+    max-width: 768px;
+  }
+  @media screen and (min-width: 1200px) {
+    max-width: 1200px;
+  }
+}
+
+.portfolio {
+  @media screen and (min-width: 768px) {
     display: flex;
     flex-wrap: wrap;
-
-    & .items {
-      margin-right: 30px;
-      margin-bottom: 30px;
-    }
-    & .items:nth-child(3n) {
-      margin-right: 0px;
-    }
-
-    &:nth-last-child(-n + 3) {
-      margin-bottom: 0px;
-    }
+    margin-left: -30px;
   }
+}
+.portfolio .items {
+  @media screen and (min-width: 768px) {
+    flex-basis: calc(100% / 2 - 30px);
+    margin-left: 30px;
+  }
+  @media screen and (min-width: 1200px) {
+    flex-basis: calc(100% / 3 - 30px);
+    margin-left: 30px;
+  }
+}
 
-  
-  
-  .portfolio-link {
-    display: block;
-    transition: box-shadow var(--hover-duration) var(--hover-time-function);
+.portfolio-link {
+  display: block;
+  transition: box-shadow var(--hover-duration) var(--hover-time-function);
 
-    &:hover,
+  &:hover,
   &:focus {
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-  }
-  }
-  
-  
-  .portfolio__items:hover .portfolio__text {
-    transform: translateY(0%);
-  }
-  .portfolio-wrap {
-    position: relative;
-    overflow: hidden;
+    
   }
   
-  .portfolio__text {
-    position: absolute;
-    top: 0;
-    height: 100%;
-    transform: translateY(100%);
-    transition: transform var(--hover-duration) var(--hover-time-function);
-    padding: 63px 24px;
-    font-weight: 400;
-    font-size: 18px;
-    line-height: 1, 56;
-    letter-spacing: 0.03em;
+}
+
+.portfolio__items:hover .portfolio__text {
+  transform: translateY(0%);
+}
+
+.portfolio-wrap {
+  position: relative;
+  overflow: hidden;
+}
+
+.portfolio__text {
+  position: absolute;
+  top: 0;
+  height: 100%;
+  transform: translateY(100%);
+  transition: transform var(--hover-duration) var(--hover-time-function);
+  padding: 63px 24px;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 1,55;
+  letter-spacing: 0.03em;
+
+  background-color: rgba(33, 150, 243, 0.9);
+  color: var(--primary-bg-color);
+}
+
+.cards {
+  padding: 20px 24px;
+
+  background: #ffffff;
+  border: 1px solid #eeeeee;
+  border-top: none;
   
-    background-color: rgba(33, 150, 243, 0.9);
-    color: var(--primary-bg-color);
+}
+
+.modify-cards {
+  @media screen and (min-width: 768px) {
+    padding-bottom: 0;
+  }
+  @media screen and (min-width: 1200px) {
+    padding-bottom: 20px;
   }
   
-  .cards {
-    padding: 20px 24px;
   
-    background: #ffffff;
-    border: 1px solid #eeeeee;
-    border-top: none;
+}
+
+
+
+.name {
+  margin-bottom: 4px;
+
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 2;
+  letter-spacing: 0.06em;
+
+  color: var(--title-text-color);
+}
+
+.names__text {
+  font-size: 18px;
+  line-height: 2;
+  letter-spacing: 0.03em;
+
+  color: var(--primary-text-color);
+}
+
+.modify-text {
+  @media screen and (min-width: 768px) {
+    padding-bottom: 56px;
+  }
+  @media screen and (min-width: 1200px) {
+    padding-bottom: 0;
   }
   
-  
-  
-  .name {
-    margin-bottom: 4px;
-  
-    font-weight: 700;
-    font-size: 18px;
-    line-height: 2;
-    letter-spacing: 0.06em;
-  
-    color: var(--title-text-color);
-  }
-  
-  .names__text {
-    font-size: 16px;
-    line-height: 1.88;
-    letter-spacing: 0.03em;
-  
-    color: var(--primary-text-color);
-  }
+}
