--- a/css/main.css
+++ b/css/main.css
@@ -1162,27 +1162,96 @@ body {
   }
 }
 
+@media screen and (min-width: 480px) {
+  .client {
+    max-width: 480px;
+  }
+}
+@media screen and (min-width: 768px) {
+  .client {
+    max-width: 768px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .client {
+    max-width: 1200px;
+  }
+}
+
+.client {
+  padding-top: 60px;
+  padding-bottom: 60px;
+}
+@media screen and (min-width: 1200px) {
+  .client {
+    padding-top: 94px;
+    padding-bottom: 94px;
+  }
+}
+
+.client-list {
+  display: flex;
+  flex-wrap: wrap;
+  margin-left: -30px;
+}
+@media screen and (min-width: 480px) {
+  .client-list {
+    display: flex;
+    flex-wrap: wrap;
+    margin-left: -30px;
+  }
+}
+
+.client__item {
+  margin-left: 30px;
+  margin-bottom: 30px;
+}
+@media screen and (min-width: 480px) {
+  .client__item {
+    flex-basis: calc(50% - 30px);
+    margin-left: 30px;
+    margin-bottom: 30px;
+  }
+}
+@media screen and (min-width: 768px) {
+  .client__item {
+    flex-basis: calc(33.3333333333% - 30px);
+  }
+}
+@media screen and (min-width: 1200px) {
+  .client__item {
+    flex-basis: calc(16.6666666667% - 30px);
+  }
+}
+
 .client-title {
   font-weight: 700;
-  font-size: 36px;
+  font-size: 28px;
   line-height: 1.17;
   text-align: center;
   letter-spacing: 0.03em;
   color: var(--title-text-color);
 }
-
-.client-title-margin {
-  margin-bottom: 50px;
+@media screen and (min-width: 1200px) {
+  .client-title {
+    font-size: 36px;
+    line-height: 1.16;
+  }
 }
 
-.client-list {
-  display: flex;
+.client-title-margin {
+  margin-bottom: 30px;
+}
+@media screen and (min-width: 1200px) {
+  .client-title-margin {
+    margin-bottom: 50px;
+  }
 }
 
 .clients-link {
   display: flex;
   box-sizing: border-box;
-  width: 170px;
+  width: 100%;
   height: 92px;
   justify-content: center;
   align-items: center;
