--- a/sass/components/_clients.scss
+++ b/sass/components/_clients.scss
@@ -1,49 +1,106 @@
-.client-title {
-    font-weight: 700;
-    font-size: 36px;
-    line-height: 1.17;
-    text-align: center;
-    letter-spacing: 0.03em;
-  
-    color: var(--title-text-color);
+.client-list {
+  // display: flex;
+}
+
+.client {
+  @media screen and (min-width: 480px) {
+    max-width: 480px;
   }
-  .client-title-margin {
+  @media screen and (min-width: 768px) {
+    max-width: 768px;
+  }
+  @media screen and (min-width: 1200px) {
+    max-width: 1200px;
+  }
+}
+
+.client {
+  padding-top: 60px;
+  padding-bottom: 60px;
+  @media screen and (min-width: 1200px) {
+    padding-top: 94px;
+    padding-bottom: 94px;
+  }
+}
+.client-list {
+  display: flex;
+  flex-wrap: wrap;
+  margin-left: -30px;
+  @media screen and (min-width: 480px) {
+    display: flex;
+    flex-wrap: wrap;
+    margin-left: -30px;
+  }
+}
+
+.client__item {
+  margin-left: 30px;
+  margin-bottom: 30px;
+  @media screen and (min-width: 480px) {
+    flex-basis: calc(100% / 2 - 30px);
+    margin-left: 30px;
+    margin-bottom: 30px;
+  }
+  @media screen and (min-width: 768px) {
+    flex-basis: calc(100% / 3 - 30px);
+  }
+
+  @media screen and (min-width: 1200px) {
+    flex-basis: calc(100% / 6 - 30px);
+  }
+}
+
+.client-title {
+  font-weight: 700;
+  font-size: 28px;
+  line-height: 1.17;
+  text-align: center;
+  letter-spacing: 0.03em;
+
+  color: var(--title-text-color);
+
+  @media screen and (min-width: 1200px) {
+    font-size: 36px;
+    line-height: 1.16;
+  }
+}
+.client-title-margin {
+  margin-bottom: 30px;
+  @media screen and (min-width: 1200px) {
     margin-bottom: 50px;
   }
-  .client-list {
-    display: flex;
+}
+
+.clients-link {
+  display: flex;
+  box-sizing: border-box;
+  width: 100%;
+  height: 92px;
+  justify-content: center;
+  align-items: center;
+  border: 1px solid var(--team-soc-icon-color);
+  border-radius: 4px;
+  transition: fill var(--hover-duration) var(--hover-time-function),
+    border var(--hover-duration) var(--hover-time-function);
+
+  fill: var(--team-soc-icon-color);
+
+  &:hover .clients__logo {
+    fill: var(--acent-color);
   }
-  
-  .clients-link {
-    display: flex;
-    box-sizing: border-box;
-    width: 170px;
-    height: 92px;
-    justify-content: center;
-    align-items: center;
-    border: 1px solid var(--team-soc-icon-color);
-    border-radius: 4px;
-    transition: fill var(--hover-duration) var(--hover-time-function),
-      border var(--hover-duration) var(--hover-time-function);
-  
-    fill: var(--team-soc-icon-color);
-  
-    &:hover .clients__logo {
-      fill: var(--acent-color);
-    }
-    &:focus .clients__logo {
-      fill: var(--acent-color);
-    }
-    &:hover {
-      fill: var(--acent-color);
-      border: 1px solid var(--acent-color);
-    }
+  &:focus .clients__logo {
+    fill: var(--acent-color);
   }
-  
-  .clients__logo {
-    transition: fill var(--hover-duration) var(--hover-time-function);
+  &:hover {
+    fill: var(--acent-color);
+    border: 1px solid var(--acent-color);
   }
-  
-  .client-item-margin + .client-item-margin {
-    margin-left: 30px;
-  }
+}
+
+.clients__logo {
+  transition: fill var(--hover-duration) var(--hover-time-function);
+}
+
+.client-item-margin + .client-item-margin {
+  margin-left: 30px;
+}
