--- a/css/main.css
+++ b/css/main.css
@@ -1163,17 +1163,17 @@ body {
 }
 
 @media screen and (min-width: 480px) {
-  .client {
+  .client .container {
     max-width: 480px;
   }
 }
 @media screen and (min-width: 768px) {
-  .client {
+  .client .container {
     max-width: 768px;
   }
 }
 @media screen and (min-width: 1200px) {
-  .client {
+  .client .container {
     max-width: 1200px;
   }
 }
@@ -1193,6 +1193,7 @@ body {
   display: flex;
   flex-wrap: wrap;
   margin-left: -30px;
+  margin-bottom: -30px;
 }
 @media screen and (min-width: 480px) {
   .client-list {
@@ -1203,6 +1204,7 @@ body {
 }
 
 .client__item {
+  width: calc(50% - 30px);
   margin-left: 30px;
   margin-bottom: 30px;
 }
