--- a/sass/components/_clients.scss
+++ b/sass/components/_clients.scss
@@ -2,7 +2,7 @@
   // display: flex;
 }
 
-.client {
+.client .container {
   @media screen and (min-width: 480px) {
     max-width: 480px;
   }
@@ -26,6 +26,7 @@
   display: flex;
   flex-wrap: wrap;
   margin-left: -30px;
+  margin-bottom: -30px;
   @media screen and (min-width: 480px) {
     display: flex;
     flex-wrap: wrap;
@@ -34,6 +35,7 @@
 }
 
 .client__item {
+  width: calc(50% - 30px);
   margin-left: 30px;
   margin-bottom: 30px;
   @media screen and (min-width: 480px) {
