--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -95,6 +95,9 @@
   &:focus {
     background-color: var(--bgc--hoverfocus-btnservice-color);
   }
+  padding-left: 29px;
+  padding-right: 13px;
+  
 }
 
 .button-icon {
