--- a/sass/components/_email-tel-footer.scss
+++ b/sass/components/_email-tel-footer.scss
@@ -7,6 +7,10 @@
   
     color: rgba(255, 255, 255, 0.6);
   }
-  .email-footer {
-    margin-bottom: 9px;
+  // .email-footer {
+  //   margin-bottom: 9px;
+  // }
+
+  .email-footer-li {
+    margin-bottom: 8px;
   }
