--- a/sass/components/_mailing-text.scss
+++ b/sass/components/_mailing-text.scss
@@ -2,9 +2,10 @@
   display: inline-flex;
   outline: none;
 
-  min-width: 358px;
+  min-width: 320px;
   height: 50px;
   padding-left: 16px;
+  margin-bottom: 20px;
 
   border: 1px solid rgba(255, 255, 255, 0.3);
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
@@ -17,5 +18,13 @@
     line-height: 1.25;
     align-items: center;
     color: rgba(255, 255, 255, 0.6);
+  }
+  @media screen and (min-width: 768px) {
+    width: 450px;
+    display: flex;
+    flex-wrap: wrap;
+  }
+  @media screen and (min-width: 1200px) {
+    width: 358px;
   }
 }
