--- a/css/main.css
+++ b/css/main.css
@@ -178,9 +178,6 @@ body {
   margin-left: 10px;
 }
 
-.footer-container {
-  text-align: center;
-}
 @media screen and (min-width: 1200px) {
   .footer-container {
     display: flex;
@@ -838,7 +835,6 @@ body {
 }
 @media screen and (min-width: 1200px) {
   .footer-icon {
-    display: flex;
     box-sizing: border-box;
     display: block;
     margin-top: 60px;
@@ -953,6 +949,7 @@ body {
 @media screen and (min-width: 1200px) {
   .email-text {
     width: 358px;
+    margin-bottom: 0;
   }
 }
 
