--- a/css/main.css
+++ b/css/main.css
@@ -249,6 +249,7 @@ body {
     display: flex;
     align-items: baseline;
     margin-left: 93px;
+    margin-top: 0px;
   }
 }
 
@@ -836,8 +837,7 @@ body {
 @media screen and (min-width: 1200px) {
   .footer-icon {
     box-sizing: border-box;
-    display: block;
-    margin-top: 60px;
+    margin-top: 0px;
     margin-left: 70px;
   }
 }
@@ -949,7 +949,7 @@ body {
 @media screen and (min-width: 1200px) {
   .email-text {
     width: 358px;
-    margin-bottom: 0;
+    margin-bottom: 0px;
   }
 }
 
@@ -1005,6 +1005,13 @@ body {
 }
 
 @media screen and (min-width: 768px) {
+  .benefits .container {
+    margin-left: auto;
+    margin-right: auto;
+  }
+}
+
+@media screen and (min-width: 768px) {
   .li-item {
     flex-basis: calc(50% - 30px);
     margin-left: 30px;
@@ -1054,7 +1061,12 @@ body {
 }
 
 .our-work {
-  padding-bottom: 94px;
+  padding-top: 0px;
+}
+@media screen and (min-width: 1200px) {
+  .our-work {
+    padding-bottom: 94px;
+  }
 }
 
 @media screen and (max-width: 1199px) {
