--- a/sass/components/_benefits.scss
+++ b/sass/components/_benefits.scss
@@ -10,6 +10,8 @@
   }
 }
 
+
+
 .benefits {
   padding-top: 60px;
   padding-bottom: 60px;
@@ -28,6 +30,13 @@
     margin-left: -30px;
   }
   @media screen and (min-width: 1200px) {
+    margin-left: auto;
+    margin-right: auto;
+  }
+}
+
+.benefits .container {
+  @media screen and (min-width: 768px) {
     margin-left: auto;
     margin-right: auto;
   }
