--- a/sass/components/_footer-icon.scss
+++ b/sass/components/_footer-icon.scss
@@ -6,8 +6,8 @@
     // margin-left: 70px;
     @media screen and (min-width: 1200px) {
     box-sizing: border-box;
-    display: block;
-    margin-top: 60px;
+    // display: block;
+    margin-top: 0px;
     margin-left: 70px;
     }
   }
