--- a/sass/main.scss
+++ b/sass/main.scss
@@ -8,7 +8,7 @@
 @import "./components/studio-hero";
 @import "./components/header-logo-text";
 @import "./components/header-icon";
-@import "./components/header-nav";
+@import "./components/header";
 @import "./components/contacts";
 @import "./components/email-tel-header";
 @import "./components/footer-logo";
