--- a/css/main.css
+++ b/css/main.css
@@ -297,9 +297,100 @@ body {
   display: flex;
   align-items: center;
 }
+@media screen and (min-width: 480px) {
+  .header {
+    max-width: 480px;
+  }
+}
+@media screen and (min-width: 768px) {
+  .header {
+    max-width: 768px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .header {
+    max-width: 1200px;
+  }
+}
 
 .studio {
   color: var(--title-text-color);
+}
+
+.header-nav {
+  display: flex;
+  align-items: center;
+  margin-left: 93px;
+  color: var(--title-text-color);
+}
+.header-nav .item {
+  align-items: center;
+}
+.header-nav .item + .item {
+  margin-left: 50px;
+}
+.header-nav .link.current {
+  color: var(--acent-color);
+}
+
+.main-nav {
+  display: flex;
+  align-items: center;
+}
+
+.st-link,
+.pf-link,
+.kon-link {
+  display: block;
+  padding-top: 32px;
+  padding-bottom: 32px;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.02em;
+  transition: color var(--hover-duration) var(--hover-time-function);
+  color: var(--title-text-color);
+}
+
+.a {
+  display: block;
+}
+
+.st-link {
+  position: relative;
+}
+.st-link.current {
+  color: var(--acent-color);
+}
+.st-link:hover, .st-link:focus {
+  color: var(--acent-color);
+}
+
+.pf-link {
+  position: relative;
+}
+.pf-link .current {
+  color: var(--acent-color);
+}
+.pf-link:hover, .pf-link:focus {
+  color: var(--acent-color);
+}
+
+.current::after {
+  position: absolute;
+  bottom: -1px;
+  left: 0;
+  content: "";
+  display: block;
+  background-color: var(--acent-color);
+  border-radius: 2px;
+  width: 100%;
+  height: 4px;
+}
+
+.kon-link:hover,
+.kon-link:focus {
+  color: var(--acent-color);
 }
 
 .backdrop {
@@ -700,6 +791,33 @@ body {
   transition: fill var(--hover-duration) var(--hover-time-function);
 }
 
+.header {
+  border-bottom: 1px solid #ececec;
+}
+.header .container {
+  display: flex;
+  align-items: center;
+}
+@media screen and (min-width: 480px) {
+  .header {
+    max-width: 480px;
+  }
+}
+@media screen and (min-width: 768px) {
+  .header {
+    max-width: 768px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .header {
+    max-width: 1200px;
+  }
+}
+
+.studio {
+  color: var(--title-text-color);
+}
+
 .header-nav {
   display: flex;
   align-items: center;
@@ -785,13 +903,28 @@ body {
   display: flex;
   margin-left: auto;
 }
-.contact .item + .item {
-  margin-left: 50px;
+@media screen and (min-width: 1200px) {
+  .contact .item + .item {
+    margin-left: 50px;
+  }
 }
 
 .header-contact {
   display: flex;
   margin-left: auto;
+}
+
+@media screen and (max-width: 1199px) {
+  .contact {
+    display: flex;
+    flex-direction: column;
+  }
+}
+
+@media screen and (max-width: 1199px) {
+  .contact .item:not(:last-child) {
+    margin-bottom: 10px;
+  }
 }
 
 .email {
@@ -803,8 +936,6 @@ body {
   line-height: 1.14;
   letter-spacing: 0.02em;
   transition: color var(--hover-duration) var(--hover-time-function);
-  padding-top: 32px;
-  padding-bottom: 32px;
   color: var(--primary-text-color);
 }
 .email:hover, .email:focus {
@@ -816,6 +947,12 @@ body {
 .email:focus .header-icon {
   fill: var(--acent-color);
 }
+@media screen and (min-width: 1200px) {
+  .email {
+    padding-top: 32px;
+    padding-bottom: 32px;
+  }
+}
 
 .tel {
   display: flex;
@@ -826,8 +963,6 @@ body {
   line-height: 1.14;
   letter-spacing: 0.02em;
   transition: color var(--hover-duration) var(--hover-time-function);
-  padding-top: 32px;
-  padding-bottom: 32px;
   color: var(--primary-text-color);
 }
 .tel:hover, .tel:focus {
@@ -838,6 +973,12 @@ body {
 }
 .tel:focus .header-icon {
   fill: var(--acent-color);
+}
+@media screen and (min-width: 1200px) {
+  .tel {
+    padding-top: 32px;
+    padding-bottom: 32px;
+  }
 }
 
 .studio-footer {
