--- a/sass/components/_our-work.scss
+++ b/sass/components/_our-work.scss
@@ -1,7 +1,7 @@
 .our-work {
   padding-top: 0px;
   @media screen and (min-width: 1200px) {
-    padding-bottom: 94px;
+    // padding-bottom: 94px;
   }
 }
 
