--- a/css/main.css
+++ b/css/main.css
@@ -310,6 +310,8 @@ body {
 @media screen and (min-width: 1200px) {
   .header {
     max-width: 1200px;
+    margin-left: auto;
+    margin-right: auto;
   }
 }
 
@@ -811,6 +813,8 @@ body {
 @media screen and (min-width: 1200px) {
   .header {
     max-width: 1200px;
+    margin-left: auto;
+    margin-right: auto;
   }
 }
 
@@ -905,7 +909,7 @@ body {
 }
 @media screen and (min-width: 1200px) {
   .contact .item + .item {
-    margin-left: 50px;
+    margin-left: 30px;
   }
 }
 
