--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -4,7 +4,6 @@
   & .container {
     display: flex;
     align-items: center;
-    
   }
   @media screen and (min-width: 480px) {
     max-width: 480px;
@@ -14,14 +13,14 @@
   }
   @media screen and (min-width: 1200px) {
     max-width: 1200px;
+    margin-left: auto;
+    margin-right: auto;
   }
 }
 
 .studio {
   color: var(--title-text-color);
 }
-
-
 
 .header-nav {
   display: flex;
