--- a/css/main.css
+++ b/css/main.css
@@ -293,10 +293,6 @@ body {
 .header {
   border-bottom: 1px solid #ececec;
 }
-.header .container {
-  display: flex;
-  align-items: center;
-}
 @media screen and (min-width: 480px) {
   .header {
     max-width: 480px;
@@ -305,6 +301,10 @@ body {
 @media screen and (min-width: 768px) {
   .header {
     max-width: 768px;
+  }
+  .header .container {
+    display: flex;
+    align-items: center;
   }
 }
 @media screen and (min-width: 1200px) {
@@ -324,7 +324,6 @@ body {
   align-items: center;
   margin-left: 93px;
   color: var(--title-text-color);
-  display: none;
 }
 .header-nav .item {
   align-items: center;
@@ -334,6 +333,11 @@ body {
 }
 .header-nav .link.current {
   color: var(--acent-color);
+}
+@media screen and (max-width: 767px) {
+  .header-nav {
+    display: none;
+  }
 }
 
 .main-nav {
@@ -399,6 +403,75 @@ body {
 .menu-open-btn {
   margin-left: auto;
   border: none;
+}
+
+.menu-close-btn {
+  display: block;
+  margin-left: auto;
+  border: none;
+  margin-bottom: 8px;
+}
+
+.mob-menu {
+  position: fixed;
+  z-index: 1;
+  top: 0;
+  left: 0;
+  background-color: white;
+  width: 100vw;
+  height: 100vh;
+  padding-top: 48px;
+  padding-bottom: 48px;
+}
+
+.mob-menu-link {
+  font-weight: 500;
+  font-size: 40px;
+  line-height: 1.17;
+  text-align: center;
+  letter-spacing: 0.02em;
+  color: #212121;
+}
+
+.mob-tel {
+  font-size: 34px;
+  line-height: 1.18;
+  letter-spacing: 0.02em;
+  color: #2196f3;
+}
+
+.mob-email {
+  font-weight: 500;
+  font-size: 24px;
+  line-height: 1.16;
+  letter-spacing: 0.02em;
+  color: #757575;
+}
+
+.mob-item:not(:last-child) {
+  margin-bottom: 32px;
+}
+
+.mob-contact {
+  margin-bottom: 64px;
+}
+
+.mob-social {
+  display: flex;
+}
+
+.mob-social-link {
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 1.22;
+  letter-spacing: 0.02em;
+  padding-right: 10px;
+  color: #2196f3;
+}
+
+.mob-social-item:not(:last-child) {
+  border-right: 1px solid rgba(33, 33, 33, 0.2);
+  margin-right: 10px;
 }
 
 .backdrop {
@@ -803,10 +876,6 @@ body {
 .header {
   border-bottom: 1px solid #ececec;
 }
-.header .container {
-  display: flex;
-  align-items: center;
-}
 @media screen and (min-width: 480px) {
   .header {
     max-width: 480px;
@@ -815,6 +884,10 @@ body {
 @media screen and (min-width: 768px) {
   .header {
     max-width: 768px;
+  }
+  .header .container {
+    display: flex;
+    align-items: center;
   }
 }
 @media screen and (min-width: 1200px) {
@@ -834,7 +907,6 @@ body {
   align-items: center;
   margin-left: 93px;
   color: var(--title-text-color);
-  display: none;
 }
 .header-nav .item {
   align-items: center;
@@ -844,6 +916,11 @@ body {
 }
 .header-nav .link.current {
   color: var(--acent-color);
+}
+@media screen and (max-width: 767px) {
+  .header-nav {
+    display: none;
+  }
 }
 
 .main-nav {
@@ -911,6 +988,75 @@ body {
   border: none;
 }
 
+.menu-close-btn {
+  display: block;
+  margin-left: auto;
+  border: none;
+  margin-bottom: 8px;
+}
+
+.mob-menu {
+  position: fixed;
+  z-index: 1;
+  top: 0;
+  left: 0;
+  background-color: white;
+  width: 100vw;
+  height: 100vh;
+  padding-top: 48px;
+  padding-bottom: 48px;
+}
+
+.mob-menu-link {
+  font-weight: 500;
+  font-size: 40px;
+  line-height: 1.17;
+  text-align: center;
+  letter-spacing: 0.02em;
+  color: #212121;
+}
+
+.mob-tel {
+  font-size: 34px;
+  line-height: 1.18;
+  letter-spacing: 0.02em;
+  color: #2196f3;
+}
+
+.mob-email {
+  font-weight: 500;
+  font-size: 24px;
+  line-height: 1.16;
+  letter-spacing: 0.02em;
+  color: #757575;
+}
+
+.mob-item:not(:last-child) {
+  margin-bottom: 32px;
+}
+
+.mob-contact {
+  margin-bottom: 64px;
+}
+
+.mob-social {
+  display: flex;
+}
+
+.mob-social-link {
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 1.22;
+  letter-spacing: 0.02em;
+  padding-right: 10px;
+  color: #2196f3;
+}
+
+.mob-social-item:not(:last-child) {
+  border-right: 1px solid rgba(33, 33, 33, 0.2);
+  margin-right: 10px;
+}
+
 .contact {
   display: block;
   font-weight: 500;
@@ -926,11 +1072,6 @@ body {
   }
 }
 
-.header-contact {
-  display: flex;
-  margin-left: auto;
-}
-
 @media screen and (max-width: 1199px) {
   .contact {
     display: flex;
@@ -938,12 +1079,14 @@ body {
   }
 }
 
-.contact .item {
-  display: none;
-}
 @media screen and (max-width: 1199px) {
   .contact .item:not(:last-child) {
     margin-bottom: 10px;
+  }
+}
+@media screen and (max-width: 767px) {
+  .contact .item {
+    display: none;
   }
 }
 
