--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -1,15 +1,15 @@
 .header {
   border-bottom: 1px solid #ececec;
 
-  & .container {
-    display: flex;
-    align-items: center;
-  }
   @media screen and (min-width: 480px) {
     max-width: 480px;
   }
   @media screen and (min-width: 768px) {
     max-width: 768px;
+    & .container {
+      display: flex;
+      align-items: center;
+    }
   }
   @media screen and (min-width: 1200px) {
     max-width: 1200px;
@@ -39,7 +39,10 @@
   & .link.current {
     color: var(--acent-color);
   }
-  display: none;
+
+  @media screen and (max-width: 767px) {
+    display: none;
+  }
 }
 
 .main-nav {
@@ -113,5 +116,73 @@
 .menu-open-btn {
   margin-left: auto;
   border: none;
-  
+}
+
+.menu-close-btn {
+  display: block;
+  margin-left: auto;
+  border: none;
+  margin-bottom: 8px;
+}
+
+.mob-menu {
+  position: fixed;
+  z-index: 1;
+  top: 0;
+  left: 0;
+  background-color: #ffff;
+  width: 100vw;
+  height: 100vh;
+  padding-top: 48px;
+  padding-bottom: 48px;
+}
+
+.mob-menu-link {
+  font-weight: 500;
+  font-size: 40px;
+  line-height: 1.17;
+  text-align: center;
+  letter-spacing: 0.02em;
+
+  color: #212121;
+}
+
+.mob-tel {
+  font-size: 34px;
+  line-height: 1.18;
+  letter-spacing: 0.02em;
+  color: #2196f3;
+}
+
+.mob-email {
+  font-weight: 500;
+  font-size: 24px;
+  line-height: 1.16;
+  letter-spacing: 0.02em;
+  color: #757575;
+}
+
+.mob-item:not(:last-child) {
+  margin-bottom: 32px;
+}
+
+.mob-contact {
+  margin-bottom: 64px;
+}
+
+.mob-social {
+  display: flex;
+}
+
+.mob-social-link {
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 1.22;
+  letter-spacing: 0.02em;
+  padding-right: 10px;
+  color: #2196f3;
+}
+.mob-social-item:not(:last-child) {
+  border-right: 1px solid rgba(33, 33, 33, 0.2);
+  margin-right: 10px;
 }
