--- a/css/main.css
+++ b/css/main.css
@@ -400,19 +400,20 @@ body {
   color: var(--acent-color);
 }
 
-.menu-open-btn {
+.js-menu-open-btn {
   margin-left: auto;
   border: none;
 }
 
-.menu-close-btn {
+.js-menu-close-btn {
   display: block;
   margin-left: auto;
   border: none;
   margin-bottom: 8px;
+  padding: 0;
 }
 
-.mob-menu {
+.js-mob-menu {
   position: fixed;
   z-index: 1;
   top: 0;
@@ -420,8 +421,17 @@ body {
   background-color: white;
   width: 100vw;
   height: 100vh;
-  padding-top: 48px;
+  padding-top: 21px;
   padding-bottom: 48px;
+  transform: translateX(100%);
+}
+
+.mob-menu .container {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+  justify-content: space-between;
+  overflow-y: auto;
 }
 
 .mob-menu-link {
@@ -983,19 +993,20 @@ body {
   color: var(--acent-color);
 }
 
-.menu-open-btn {
+.js-menu-open-btn {
   margin-left: auto;
   border: none;
 }
 
-.menu-close-btn {
+.js-menu-close-btn {
   display: block;
   margin-left: auto;
   border: none;
   margin-bottom: 8px;
+  padding: 0;
 }
 
-.mob-menu {
+.js-mob-menu {
   position: fixed;
   z-index: 1;
   top: 0;
@@ -1003,8 +1014,17 @@ body {
   background-color: white;
   width: 100vw;
   height: 100vh;
-  padding-top: 48px;
+  padding-top: 21px;
   padding-bottom: 48px;
+  transform: translateX(100%);
+}
+
+.mob-menu .container {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+  justify-content: space-between;
+  overflow-y: auto;
 }
 
 .mob-menu-link {
