--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -113,19 +113,20 @@
   color: var(--acent-color);
 }
 
-.menu-open-btn {
+.js-menu-open-btn {
   margin-left: auto;
   border: none;
 }
 
-.menu-close-btn {
+.js-menu-close-btn {
   display: block;
   margin-left: auto;
   border: none;
   margin-bottom: 8px;
+  padding: 0;
 }
 
-.mob-menu {
+.js-mob-menu {
   position: fixed;
   z-index: 1;
   top: 0;
@@ -133,8 +134,18 @@
   background-color: #ffff;
   width: 100vw;
   height: 100vh;
-  padding-top: 48px;
+  padding-top: 21px;
   padding-bottom: 48px;
+  transform: translateX(100%);
+  
+}
+
+.mob-menu .container {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+  justify-content: space-between;
+  overflow-y: auto;
 }
 
 .mob-menu-link {
