зробив мобільне меню,скріпт не працює

--- a/css/main.css
+++ b/css/main.css
@@ -423,10 +423,9 @@ body {
   height: 100vh;
   padding-top: 21px;
   padding-bottom: 48px;
-  transform: translateX(100%);
 }
 
-.mob-menu .container {
+.js-mob-menu .container {
   display: flex;
   flex-direction: column;
   height: 100%;
@@ -1016,10 +1015,9 @@ body {
   height: 100vh;
   padding-top: 21px;
   padding-bottom: 48px;
-  transform: translateX(100%);
 }
 
-.mob-menu .container {
+.js-mob-menu .container {
   display: flex;
   flex-direction: column;
   height: 100%;
