мучусь з їбаним мобільним меню

--- a/css/main.css
+++ b/css/main.css
@@ -400,12 +400,12 @@ body {
   color: var(--acent-color);
 }
 
-.js-menu-open-btn {
+.js-open-menu {
   margin-left: auto;
   border: none;
 }
 
-.js-menu-close-btn {
+.js-close-menu {
   display: block;
   margin-left: auto;
   border: none;
@@ -413,7 +413,7 @@ body {
   padding: 0;
 }
 
-.js-mob-menu {
+.js-menu-container {
   position: fixed;
   z-index: 1;
   top: 0;
@@ -423,9 +423,14 @@ body {
   height: 100vh;
   padding-top: 21px;
   padding-bottom: 48px;
+  transform: translateX(100%);
 }
 
-.js-mob-menu .container {
+.js-menu-container .is-open {
+  transform: translateX(0);
+}
+
+.js-menu-container .container {
   display: flex;
   flex-direction: column;
   height: 100%;
@@ -992,12 +997,12 @@ body {
   color: var(--acent-color);
 }
 
-.js-menu-open-btn {
+.js-open-menu {
   margin-left: auto;
   border: none;
 }
 
-.js-menu-close-btn {
+.js-close-menu {
   display: block;
   margin-left: auto;
   border: none;
@@ -1005,7 +1010,7 @@ body {
   padding: 0;
 }
 
-.js-mob-menu {
+.js-menu-container {
   position: fixed;
   z-index: 1;
   top: 0;
@@ -1015,9 +1020,14 @@ body {
   height: 100vh;
   padding-top: 21px;
   padding-bottom: 48px;
+  transform: translateX(100%);
 }
 
-.js-mob-menu .container {
+.js-menu-container .is-open {
+  transform: translateX(0);
+}
+
+.js-menu-container .container {
   display: flex;
   flex-direction: column;
   height: 100%;
