--- a/css/main.css
+++ b/css/main.css
@@ -404,6 +404,11 @@ body {
   margin-left: auto;
   border: none;
 }
+@media screen and (min-width: 768px) {
+  .js-open-menu {
+    display: none;
+  }
+}
 
 .js-close-menu {
   display: block;
@@ -424,6 +429,7 @@ body {
   padding-top: 21px;
   padding-bottom: 48px;
   transform: translateX(100%);
+  transition: transform 250ms ease-in-out;
 }
 
 .is-open {
@@ -1001,6 +1007,11 @@ body {
   margin-left: auto;
   border: none;
 }
+@media screen and (min-width: 768px) {
+  .js-open-menu {
+    display: none;
+  }
+}
 
 .js-close-menu {
   display: block;
@@ -1021,6 +1032,7 @@ body {
   padding-top: 21px;
   padding-bottom: 48px;
   transform: translateX(100%);
+  transition: transform 250ms ease-in-out;
 }
 
 .is-open {
