--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -3,6 +3,7 @@
 
   @media screen and (min-width: 480px) {
     max-width: 480px;
+    
   }
   @media screen and (min-width: 768px) {
     max-width: 768px;
@@ -116,6 +117,9 @@
 .js-open-menu {
   margin-left: auto;
   border: none;
+  @media screen and (min-width: 768px) {
+    display: none;
+  }
 }
 
 .js-close-menu {
@@ -137,6 +141,8 @@
   padding-top: 21px;
   padding-bottom: 48px;
   transform: translateX(100%);
+  transition: transform 250ms ease-in-out;
+  
   
 }
 
@@ -144,12 +150,15 @@
   transform: translateX(0);
 }
 
+
+
 .js-menu-container .container {
   display: flex;
   flex-direction: column;
   height: 100%;
   justify-content: space-between;
   overflow-y: auto;
+  
 }
 
 .mob-menu-link {
@@ -160,6 +169,7 @@
   letter-spacing: 0.02em;
 
   color: #212121;
+  
 }
 
 .mob-tel {
