--- a/css/main.css
+++ b/css/main.css
@@ -310,9 +310,12 @@ body {
 @media screen and (min-width: 1200px) {
   .header {
     max-width: 1200px;
-    margin-left: auto;
-    margin-right: auto;
   }
+}
+
+.header .container {
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .studio {
@@ -913,9 +916,12 @@ body {
 @media screen and (min-width: 1200px) {
   .header {
     max-width: 1200px;
-    margin-left: auto;
-    margin-right: auto;
   }
+}
+
+.header .container {
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .studio {
