--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -14,9 +14,13 @@
   }
   @media screen and (min-width: 1200px) {
     max-width: 1200px;
-    margin-left: auto;
-    margin-right: auto;
+    
   }
+}
+
+.header .container {
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .studio {
