--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -219,7 +219,7 @@
   &:checked + .check-text::before {
     background-color: var(--acent-color);
     border: none;
-    background-image: url(../img2/checkbox-icon.svg);
+    background-image: url(../images/checkbox-icon.svg);
     background-repeat: no-repeat;
     background-position: center;
   }
