--- a/css/main.css
+++ b/css/main.css
@@ -293,22 +293,32 @@ body {
 .header {
   border-bottom: 1px solid #ececec;
 }
+
 @media screen and (min-width: 480px) {
-  .header {
+  .header .container {
     max-width: 480px;
   }
 }
 @media screen and (min-width: 768px) {
-  .header {
+  .header .container {
     max-width: 768px;
   }
+}
+@media screen and (min-width: 1200px) {
   .header .container {
+    max-width: 1200px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .header-container {
+    max-width: 768px;
     display: flex;
     align-items: center;
   }
 }
 @media screen and (min-width: 1200px) {
-  .header {
+  .header-container {
     max-width: 1200px;
     margin-left: auto;
     margin-right: auto;
@@ -693,7 +703,7 @@ body {
 .input-check:checked + .check-text::before {
   background-color: var(--acent-color);
   border: none;
-  background-image: url(../img2/checkbox-icon.svg);
+  background-image: url(../images/checkbox-icon.svg);
   background-repeat: no-repeat;
   background-position: center;
 }
@@ -896,22 +906,32 @@ body {
 .header {
   border-bottom: 1px solid #ececec;
 }
+
 @media screen and (min-width: 480px) {
-  .header {
+  .header .container {
     max-width: 480px;
   }
 }
 @media screen and (min-width: 768px) {
-  .header {
+  .header .container {
     max-width: 768px;
   }
+}
+@media screen and (min-width: 1200px) {
   .header .container {
+    max-width: 1200px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .header-container {
+    max-width: 768px;
     display: flex;
     align-items: center;
   }
 }
 @media screen and (min-width: 1200px) {
-  .header {
+  .header-container {
     max-width: 1200px;
     margin-left: auto;
     margin-right: auto;
